fixed error with overflow

--- a/static/style.css
+++ b/static/style.css
@@ -169,7 +169,13 @@
         }
 
         .content{
-            margin: 1%
+            margin: 1%;
+            overflow-x: hidden;
+        }
+        pre {
+            overflow-x:auto;
+            background-color: #f1f1f1; 
+            padding: 16px;
         }
         h1,h2,h3{
             color: dodgerblue;
@@ -187,7 +193,7 @@
             text-decoration: none;
             font-size: 18px;
             color: #818181;
-            display: inline;
+            display: block;
         }
   
   
